RESOLVED FIXED97535
DFG ArrayPush, ArrayPop don't handle clobbering or having a bad time correctly
https://bugs.webkit.org/show_bug.cgi?id=97535
Summary DFG ArrayPush, ArrayPop don't handle clobbering or having a bad time correctly
Filip Pizlo
Reported 2012-09-25 00:35:18 PDT
I don't know what happened here. They're just wrong.
Attachments
the patch (4.56 KB, patch)
2012-09-25 18:56 PDT, Filip Pizlo
no flags
the patch (4.57 KB, patch)
2012-09-25 19:14 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-09-25 18:56:27 PDT
Created attachment 165715 [details] the patch Test cases on the way.
Filip Pizlo
Comment 2 2012-09-25 19:14:23 PDT
Created attachment 165717 [details] the patch
Filip Pizlo
Comment 3 2012-09-25 19:56:28 PDT
Note You need to log in before you can comment on or make changes to this bug.