DFG ArrayPush, ArrayPop don't handle clobbering or having a bad time correctly https://bugs.webkit.org/show_bug.cgi?id=97535

Source/JavaScriptCore:

Reviewed by Oliver Hunt.

* dfg/DFGAbstractState.cpp:
(JSC::DFG::AbstractState::execute):
* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::handleIntrinsic):
* dfg/DFGStructureCheckHoistingPhase.cpp:
(JSC::DFG::StructureCheckHoistingPhase::run):

LayoutTests:

Rubber stamped by Oliver Hunt.

* fast/js/dfg-array-pop-side-effects-expected.txt: Added.
* fast/js/dfg-array-pop-side-effects.html: Added.
* fast/js/dfg-array-push-bad-time-expected.txt: Added.
* fast/js/dfg-array-push-bad-time.html: Added.
* fast/js/dfg-array-push-slow-put-expected.txt: Added.
* fast/js/dfg-array-push-slow-put.html: Added.
* fast/js/jsc-test-list:
* fast/js/script-tests/dfg-array-pop-side-effects.js: Added.
(foo):
(.b):
* fast/js/script-tests/dfg-array-push-bad-time.js: Added.
* fast/js/script-tests/dfg-array-push-slow-put.js: Added.
(foo):



Canonical link: https://commits.webkit.org/115604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129588 268f45cc-cd09-0410-ab3c-d52691b4dbfc